Fix responsiveness on small screens

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -3,11 +3,7 @@ html {
   font-size: 62.5%;
 
   @include respond(small-phone) {
-    font-size: 40%;
-  }
-
-  @include respond(phone) {
-    font-size: 50%;
+    font-size: 55%;
   }
 }
 
