--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -30,7 +30,7 @@
 }
 
 .paragraph {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   margin: 3rem;
 
   @include respond(desk) {
